# Ordo-AI-Stack

./: .cbmignore  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  compose  compose.ps1  docker-compose.yml  ordo-ai-stack  ordo-ai-stack.cmd  ordo-ai-stack.ps1  pyproject.toml
v2/: .gitignore  AUDIT.md  CUTOVER.md  FLIP.md  PARITY-VALIDATION.md  PARITY.md  README.md  ordo.example.yaml  pyproject.toml  requirements-dev.txt
v2/agents/: README.md
v2/agents/hermes/: agent.yaml
v2/agents/openai-agent/: agent.yaml
v2/assets/: lease-exec.py
v2/assets/aitk-patches/: flux2_model.py
v2/catalog/: models.yaml
v2/dashboard/: index.html  nginx.conf
v2/docker/: dashboard.Dockerfile  ops-controller.Dockerfile
v2/docker/agent-hermes/: README.md
v2/ordo/: __init__.py  __main__.py  agents.py  broker.py  catalog.py  cli.py  compose.py  config.py  control.py  dashboards.py  doctor.py  fetch.py  hardware.py  lease_history.py  native.py  parity.py  plugins.py  preflight.py  render.py  scheduler.py  wizard.py
v2/tests/: test_agents.py  test_broker.py  test_cloud_fallback.py  test_compose.py  test_compose_recreate.py  test_control.py  test_dashboards.py  test_fetch.py  test_lease_exec.py  test_lease_history.py  test_mcp.py  test_memory_vault.py  test_memory_vault_ingestion.py  test_native.py  test_obsidian_memory.py  test_ops_api_stats.py  test_parity.py  test_parity_render.py  test_plugins.py  test_preflight.py  test_render.py  test_scheduler.py  test_status_doctor.py  test_wizard.py
(+291 files in other folders)
